--- a/requirements.txt
+++ b/requirements.txt
@@ -10,6 +10,7 @@ click-didyoumean==0.3.0
 click-plugins==1.1.1
 click-repl==0.2.0
 Django==4.0.1
+django-debug-toolbar==3.2.4
 django-widget-tweaks==1.4.12
 flower==1.0.0
 humanize==3.14.0
